--- a/webservice-tools/pom.xml
+++ b/webservice-tools/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>no.difi.move-common</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.5</version>
+        <version>2.0.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>webservice-tools</artifactId>
