--- a/.github/workflows/call-maventests.yml
+++ b/.github/workflows/call-maventests.yml
@@ -1,13 +1,25 @@
-name: Build Maven Java
+name: Maven build
 
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches: [main]
+
+  workflow_call:
+
+  repository_dispatch:
+    types: [build-publish-image]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  packages: write
 
 jobs:
   call-workflow-maven-build:
     uses: felleslosninger/github-workflows/.github/workflows/ci-maven-build-lib.yml@main
     with:
       java-version: 21
-      sbom-path: .
+      sbom-path: ./
     secrets: inherit
