--- a/.github/workflows/call-release.yml
+++ b/.github/workflows/call-release.yml
@@ -12,6 +12,7 @@ jobs:
     uses: felleslosninger/github-workflows/.github/workflows/ci-maven-install-deploy-lib.yml@main
     with:
       package-version: ${{ github.event.release.tag_name }}
+      deployment-repository: ${{ github.repository }}
       java-version: 21
       sbom-path: ./
     secrets: inherit
