--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>no.idporten.validators</groupId>
             <artifactId>idporten-validators</artifactId>
-            <version>1.6.0</version>
+            <version>${idporten-validators.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
